--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "gulp watch",
     "test": "gulp test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "gulp": "^3.7.0",
     "gulp-util": "^2.2.14",
@@ -43,5 +42,24 @@
     "karma-chrome-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
     "karma": "~0.12.16"
-  }
+  },
+  "description": "varroa ============",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/wombleton/varroa.vision.git"
+  },
+  "keywords": [
+    "varroa",
+    "mite",
+    "vision",
+    "bees",
+    "computervision"
+  ],
+  "author": "Rowan Crawford <wombleton@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/wombleton/varroa.vision/issues"
+  },
+  "homepage": "https://github.com/wombleton/varroa.vision"
 }
