--- a/.jshintrc
+++ b/.jshintrc
@@ -4,6 +4,8 @@
   "camelcase": true,
   "curly": true,
   "eqeqeq": true,
+  "esnext": true,
+  "globalstrict": true,
   "immed": true,
   "indent": 2,
   "newcap": true,
@@ -13,6 +15,7 @@
   "undef": true,
   "unused": true,
   "strict": true,
+  "sub": true,
   "trailing": true,
   "smarttabs": true,
   "globals": {
