--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "version": "0.1.0",
   "description": "TODO",
   "authors": [
-    "TODO"
+    "Rowan Crawford <wombleton@gmail.com>"
   ],
   "ignore": [
     "**/.*",
@@ -20,7 +20,9 @@
   ],
   "dependencies": {
     "angular": "~1.2.14",
-    "angular-route": "~1.2.14"
+    "bootstrap-sass-official": "~3.3.4",
+    "angular-ui-router": "~0.2.13",
+    "ng-file-upload": "~3.2.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.14"
