--- a/package.json
+++ b/package.json
@@ -6,7 +6,27 @@
     "start": "gulp watch",
     "test": "gulp test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "~4.0.0",
+    "morgan": "~1.0.0",
+    "body-parser": "~1.5.0",
+    "method-override": "~1.0.0",
+    "serve-favicon": "~2.0.1",
+    "cookie-parser": "~1.0.1",
+    "express-session": "~1.0.2",
+    "errorhandler": "~1.0.0",
+    "compression": "~1.0.1",
+    "lodash": "~2.4.1",
+    "ejs": "~0.8.4",
+    "mongoose": "~3.8.8",
+    "jsonwebtoken": "^0.3.0",
+    "express-jwt": "^0.1.3",
+    "passport": "~0.2.0",
+    "passport-local": "~0.1.6",
+    "composable-middleware": "^0.3.0",
+    "connect-mongo": "^0.4.1",
+    "gulp-nodemon": "^2.0.2"
+  },
   "devDependencies": {
     "gulp": "^3.7.0",
     "gulp-util": "^2.2.14",
@@ -41,7 +61,9 @@
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
-    "karma": "~0.12.16"
+    "karma": "~0.12.16",
+    "connect-livereload": "^0.5.3",
+    "gulp-babel": "^4.0.0"
   },
   "description": "varroa ============",
   "main": "index.js",
