--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "gulp watch",
+    "start": "gulp serve",
     "test": "gulp test"
   },
   "dependencies": {
@@ -25,7 +25,12 @@
     "passport-local": "~0.1.6",
     "composable-middleware": "^0.3.0",
     "connect-mongo": "^0.4.1",
-    "gulp-nodemon": "^2.0.2"
+    "gulp-nodemon": "^2.0.2",
+    "babel": "^4.7.16",
+    "multipart-pipe": "^0.3.0",
+    "knox": "^0.9.2",
+    "mimetypes": "^0.1.1",
+    "q": "^1.2.0"
   },
   "devDependencies": {
     "gulp": "^3.7.0",
@@ -63,7 +68,9 @@
     "karma-firefox-launcher": "~0.1.3",
     "karma": "~0.12.16",
     "connect-livereload": "^0.5.3",
-    "gulp-babel": "^4.0.0"
+    "gulp-babel": "^4.0.0",
+    "properties": "^1.2.1",
+    "properties-parser": "^0.2.3"
   },
   "description": "varroa ============",
   "main": "index.js",
