--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "babel": "^4.7.16",
     "multipart-pipe": "^0.3.0",
     "knox": "^0.9.2",
-    "mimetypes": "^0.1.1",
-    "q": "^1.2.0"
+    "q": "^1.2.0",
+    "mime-types": "^2.0.10"
   },
   "devDependencies": {
     "gulp": "^3.7.0",
