--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "multipart-pipe": "^0.3.0",
     "knox": "^0.9.2",
     "q": "^1.2.0",
-    "mime-types": "^2.0.10"
+    "mime-types": "^2.0.10",
+    "curli": "^0.5.0"
   },
   "devDependencies": {
     "gulp": "^3.7.0",
