--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "knox": "^0.9.2",
     "q": "^1.2.0",
     "mime-types": "^2.0.10",
-    "curli": "^0.5.0"
+    "curli": "^0.5.0",
+    "filesize": "^3.1.2"
   },
   "devDependencies": {
     "gulp": "^3.7.0",
