--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "gulp serve",
+    "start": "node index.js",
     "test": "gulp test"
   },
   "dependencies": {
