--- a/bower.json
+++ b/bower.json
@@ -24,8 +24,7 @@
     "angular-ui-router": "~0.2.13",
     "ng-file-upload": "~3.2.4",
     "lodash": "~3.6.0",
-    "angular-moment": "~0.9.2",
-    "angulartics": "~0.17.2"
+    "angular-moment": "~0.9.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.14"
