--- a/package.json
+++ b/package.json
@@ -7,32 +7,33 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "express": "~4.0.0",
-    "morgan": "~1.0.0",
+    "babel": "^4.7.16",
     "body-parser": "~1.5.0",
-    "method-override": "~1.0.0",
-    "serve-favicon": "~2.0.1",
-    "cookie-parser": "~1.0.1",
-    "express-session": "~1.0.2",
-    "errorhandler": "~1.0.0",
+    "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
-    "lodash": "~2.4.1",
+    "connect-mongo": "^0.4.1",
+    "cookie-parser": "~1.0.1",
+    "curli": "^0.5.0",
     "ejs": "~0.8.4",
-    "mongoose": "~3.8.8",
-    "jsonwebtoken": "^0.3.0",
+    "errorhandler": "~1.0.0",
+    "express": "~4.0.0",
     "express-jwt": "^0.1.3",
+    "express-session": "~1.0.2",
+    "filesize": "^3.1.2",
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.2",
+    "jsonwebtoken": "^0.3.0",
+    "knox": "^0.9.2",
+    "lodash": "~2.4.1",
+    "method-override": "~1.0.0",
+    "mime-types": "^2.0.10",
+    "mongoose": "~3.8.8",
+    "morgan": "~1.0.0",
+    "multipart-pipe": "^0.3.0",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
-    "composable-middleware": "^0.3.0",
-    "connect-mongo": "^0.4.1",
-    "gulp-nodemon": "^2.0.2",
-    "babel": "^4.7.16",
-    "multipart-pipe": "^0.3.0",
-    "knox": "^0.9.2",
     "q": "^1.2.0",
-    "mime-types": "^2.0.10",
-    "curli": "^0.5.0",
-    "filesize": "^3.1.2"
+    "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
     "gulp": "^3.7.0",
