--- a/package.json
+++ b/package.json
@@ -7,73 +7,78 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "babel": "^4.7.16",
+    "async": "^1.5.0",
+    "babel": "^5.8.29",
     "body-parser": "~1.5.0",
     "composable-middleware": "^0.3.0",
-    "compression": "~1.0.1",
+    "compression": "^1.0.11",
     "connect-mongo": "^0.4.1",
     "cookie-parser": "~1.0.1",
     "curli": "^0.5.0",
     "ejs": "~0.8.4",
     "errorhandler": "~1.0.0",
-    "express": "~4.0.0",
-    "express-jwt": "^0.1.3",
-    "express-session": "~1.0.2",
+    "express": "^4.0.0",
+    "express-jwt": "^0.1.4",
+    "express-session": "^1.0.4",
     "filesize": "^3.1.2",
-    "gulp": "^3.9.0",
-    "gulp-nodemon": "^2.0.2",
-    "jsonwebtoken": "^0.3.0",
+    "jsonwebtoken": "^5.4.0",
     "knox": "^0.9.2",
-    "lodash": "~2.4.1",
+    "lodash": "^3.10.1",
+    "md5": "^2.0.0",
     "method-override": "~1.0.0",
-    "mime-types": "^2.0.10",
-    "mongoose": "~3.8.8",
+    "mime-types": "^2.1.7",
+    "mongoose": "^4.2.2",
     "morgan": "~1.0.0",
     "multipart-pipe": "^0.3.0",
-    "passport": "~0.2.0",
-    "passport-local": "~0.1.6",
+    "passport": "^0.2.2",
+    "passport-local": "^0.1.6",
+    "pause-stream": "0.0.11",
     "q": "^1.2.0",
-    "serve-favicon": "~2.0.1"
+    "request": "^2.65.0",
+    "serve-favicon": "~2.0.1",
+    "tilenol": "0.0.1"
   },
   "devDependencies": {
-    "gulp": "^3.7.0",
-    "gulp-util": "^2.2.14",
-    "gulp-jshint": "^1.6.1",
-    "gulp-load-plugins": "~0.5.1",
-    "jshint-stylish": "~0.4.0",
-    "gulp-rename": "^1.2.0",
-    "main-bower-files": "^1.0.1",
-    "gulp-angular-filesort": "^1.0.3",
-    "lazypipe": "~0.2.1",
-    "gulp-cached": "^1.0.1",
-    "gulp-embedlr": "~0.5.2",
-    "gulp-livereload": "^2.1.0",
-    "gulp-header": "^1.0.2",
-    "gulp-inject": "^1.0.1",
-    "gulp-serve": "~0.2.0",
-    "gulp-concat": "^2.2.0",
-    "rimraf": "^2.2.8",
-    "gulp-sass": "^0.7.1",
-    "gulp-minify-css": "~0.3.4",
-    "gulp-csslint": "~0.1.4",
+    "connect-livereload": "^0.5.3",
+    "debug": "^2.2.0",
     "event-stream": "^3.1.5",
-    "streamqueue": "~0.1.1",
-    "gulp-uglify": "~0.3.0",
-    "gulp-htmlmin": "~0.1.2",
+    "gulp": "^3.9.0",
+    "gulp-angular-filesort": "^1.0.3",
+    "gulp-babel": "^5.3.0",
+    "gulp-cached": "^1.0.1",
+    "gulp-concat": "^2.2.0",
+    "gulp-csslint": "~0.1.4",
+    "gulp-embedlr": "~0.5.2",
+    "gulp-header": "^1.0.2",
+    "gulp-htmlmin": "^1.2.0",
+    "gulp-inject": "^1.0.1",
+    "gulp-jshint": "^1.11.2",
+    "gulp-karma": "0.0.5",
+    "gulp-livereload": "^2.1.0",
+    "gulp-load-plugins": "~0.5.1",
+    "gulp-minify-css": "~0.3.4",
+    "gulp-ng-annotate": "^1.1.0",
     "gulp-ng-html2js": "~0.1.7",
-    "gulp-ng-annotate": "~0.2.0",
-    "gulp-karma": "~0.0.4",
+    "gulp-nodemon": "^2.0.2",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^0.7.1",
+    "gulp-serve": "^1.2.0",
+    "gulp-uglify": "~0.3.0",
+    "gulp-util": "^3.0.7",
+    "jshint-stylish": "~0.4.0",
+    "karma": "^0.13.14",
     "karma-chai": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-firefox-launcher": "~0.1.3",
     "karma-mocha": "~0.1.3",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.4",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma": "~0.12.16",
-    "connect-livereload": "^0.5.3",
-    "gulp-babel": "^4.0.0",
+    "lazypipe": "~0.2.1",
+    "main-bower-files": "^1.0.1",
     "properties": "^1.2.1",
-    "properties-parser": "^0.2.3"
+    "properties-parser": "^0.2.3",
+    "rimraf": "^2.2.8",
+    "streamqueue": "~0.1.1"
   },
   "description": "varroa ============",
   "main": "index.js",
