--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   "dependencies": {
     "async": "^1.5.0",
     "babel": "^5.8.29",
-    "body-parser": "~1.5.0",
+    "body-parser": "^1.14.1",
     "composable-middleware": "^0.3.0",
-    "compression": "^1.0.11",
-    "connect-mongo": "^0.4.1",
+    "compression": "^1.6.0",
+    "connect-mongo": "^0.8.2",
     "cookie-parser": "~1.0.1",
     "curli": "^0.5.0",
-    "ejs": "~0.8.4",
+    "ejs": "^0.8.8",
     "errorhandler": "~1.0.0",
-    "express": "^4.0.0",
-    "express-jwt": "^0.1.4",
-    "express-session": "^1.0.4",
+    "express": "^4.13.3",
+    "express-jwt": "^3.1.0",
+    "express-session": "^1.12.0",
     "filesize": "^3.1.2",
     "jsonwebtoken": "^5.4.0",
     "knox": "^0.9.2",
@@ -29,10 +29,8 @@
     "mime-types": "^2.1.7",
     "mongoose": "^4.2.2",
     "morgan": "~1.0.0",
-    "multipart-pipe": "^0.3.0",
-    "passport": "^0.2.2",
-    "passport-local": "^0.1.6",
-    "pause-stream": "0.0.11",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
     "q": "^1.2.0",
     "request": "^2.65.0",
     "serve-favicon": "~2.0.1",
