--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "md5": "^2.0.0",
     "method-override": "~1.0.0",
     "mime-types": "^2.1.7",
+    "moment": "^2.10.6",
     "mongoose": "^4.2.2",
     "morgan": "~1.0.0",
     "passport": "^0.3.0",
