--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "gulp": "^3.9.0",
     "gulp-angular-filesort": "^1.0.3",
     "gulp-babel": "^5.3.0",
-    "gulp-cached": "^1.0.1",
+    "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.2.0",
     "gulp-csslint": "~0.1.4",
     "gulp-embedlr": "~0.5.2",
@@ -57,12 +57,12 @@
     "gulp-load-plugins": "~0.5.1",
     "gulp-minify-css": "~0.3.4",
     "gulp-ng-annotate": "^1.1.0",
-    "gulp-ng-html2js": "~0.1.7",
+    "gulp-ng-html2js": "^0.2.0",
     "gulp-nodemon": "^2.0.2",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^0.7.1",
+    "gulp-sass": "^2.1.0",
     "gulp-serve": "^1.2.0",
-    "gulp-uglify": "~0.3.0",
+    "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
     "jshint-stylish": "~0.4.0",
     "karma": "^0.13.14",
