--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "ng-file-upload": "~3.2.4",
     "lodash": "~3.6.0",
     "angular-moment": "~0.9.2",
-    "angulartics": "~0.17.2"
+    "angulartics": "~0.17.2",
+    "ngInfiniteScroll": "~1.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.14"
