--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-jwt": "^3.1.0",
     "express-session": "^1.12.0",
     "filesize": "^3.1.2",
+    "get-pixels": "3.2.3",
     "jsonwebtoken": "^5.4.0",
     "knox": "^0.9.2",
     "lodash": "^3.10.1",
